2002-02-21  Kjetil Jacobsen  <kjetilja>

	* Added the 'xmlrpc_curl.py' file which implements a transport
	for xmlrpclib using pycurl.

	* Added CURLINFO_CONTENT_TYPE.

	* Added CURLOPT_SSLCERTTYPE, CURLOPT_SSLKEY, CURLOPT_SSLKEYTYPE,
	CURLOPT_SSLKEYPASSWD, CURLOPT_SSLENGINE and
	CURLOPT_SSLENGINE_DEFAULT.
	
2002-02-19  Kjetil Jacobsen  <kjetilja>

	* Fixed docstring for getopt() function.

2001-12-18  Kjetil Jacobsen  <kjetilja>

	* Updated the INSTALL information for Win32.

2001-12-12  Kjetil Jacobsen  <kjetilja>

	* Added missing link flag to make pycurl build on MacOS X (by Matt
	King <matt@gnik.com>).

2001-12-06  Kjetil Jacobsen  <kjetilja>

	* Added CURLINFO_STARTTRANSFER_TIME and CURLOPT_FTP_USE_EPSV from
	libcurl 7.9.2.

2001-12-01  Markus F.X.J. Oberhumer <mfx>

	* Added the 'test_stringio.py' file which demonstrates the use of
	StringIO objects as callback.

2001-12-01  Markus F.X.J. Oberhumer <mfx>

	* setup.py: Do not remove entries from a list while iterating
	over it.

2001-11-29  Kjetil Jacobsen  <kjetilja>

	* Added code in setup.py to install on Windows.  Requires some
	manual configuration (by Tino Lange <Tino.Lange@gmx.de>).

2001-11-27  Kjetil Jacobsen  <kjetilja>

	* Improved detection of where libcurl is installed in setup.py.
	Should make it easier to install pycurl when libcurl is not
	located in regular lib/include paths.

2001-11-05  Kjetil Jacobsen  <kjetilja>

	* Some of the newer options to setopt were missing, this should
	now be fixed.

2001-11-04  Kjetil Jacobsen  <kjetilja>

	* Exception handling has been improved and should no longer throw
	spurious exceptions (by Markus F.X.J. Oberhumer
	<markus@oberhumer.com>).

2001-10-15  Kjetil Jacobsen  <kjetilja>

	* Refactored the test_gtk.py script to avoid global variables.

2001-10-12  Kjetil Jacobsen  <kjetilja>

	* Added module docstrings, terse perhaps, but better than nothing.

	* Added the 'basicfirst.py' file which is a Python version of the
	corresponding Perl script by Daniel.
